--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,14 @@ input::-webkit-inner-spin-button {
   animation-iteration-count: infinite;
 }
 
+.video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+  top: 0;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
