--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,10 +29,11 @@ input::-webkit-inner-spin-button {
 }
 
 .video {
-  height: 100%;
+  height: calc(100vh);
   width: 100%;
+  --media-object-fit: cover;
   object-fit: cover;
-  z-index: -1;
+  z-index: -2;
   top: 0;
 }
 
